Refactor CodeFactory and Engine to remove deprecated virtual rotor methods, streamline code processing, and enhance rotor identification