@@ -1,7 +1,6 @@
 package enigma.machine.rotor;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 
 /**
  * Canonical runtime rotor implementation using the mechanical column-rotation model.
@@ -43,8 +42,10 @@ import java.util.List;
  */
 public class RotorImpl implements Rotor {
 
-    private final List<Integer> rightColumn;  // keyboard-facing contacts
-    private final List<Integer> leftColumn;   // reflector-facing contacts
+    // Wire pairs represent one row in the physical rotor: right (keyboard) and left (reflector)
+    private record Wire(int right, int left) {}
+
+    private final LinkedList<Wire> wires;  // rows in top→bottom order
     private final int alphabetSize;
 
     private final int notchIndex; // which row triggers stepping of next rotor
@@ -58,26 +59,28 @@ public class RotorImpl implements Rotor {
      * symbol that is wired to right-column symbol {@code i}.</p>
      *
      * <p>The mechanical model computes backward mappings dynamically by searching
-     * the columns, so the backward mapping parameter is accepted for API consistency
-     * with the specification but not stored.</p>
+     * the wires list, so the backward mapping parameter is accepted for API consistency
+     * with the specification but not stored. We perform a light sanity-check on the
+     * backward mapping to catch malformed specs early.</p>
      *
      * @param forwardMapping mapping from right→left (base wiring); index = right symbol, value = left symbol
-     * @param backwardMapping inverse mapping (left→right); accepted for API consistency, computed dynamically
+     * @param backwardMapping inverse mapping (left→right); accepted for API consistency, validated for length
      * @param notchIndex index at which the rotor triggers stepping of the next rotor (0..N-1)
      * @param alphabetSize size of alphabet (typically 26 for A-Z)
      * @param id rotor identifier for debugging/tracing
      */
     public RotorImpl(int[] forwardMapping, int[] backwardMapping, int notchIndex, int alphabetSize, int id) {
         this.alphabetSize = alphabetSize;
-        // Build columns: rightColumn is identity [0,1,2,...], leftColumn holds the wiring
-        this.rightColumn = new ArrayList<>(alphabetSize);
-        this.leftColumn  = new ArrayList<>(alphabetSize);
+        // Basic validation of backwardMapping to make use of the parameter and catch spec errors
+        if (backwardMapping == null) throw new IllegalArgumentException("backwardMapping must not be null");
+        if (backwardMapping.length != alphabetSize)
+            throw new IllegalArgumentException("backwardMapping length must equal alphabetSize");
+
+        // Build wires list: right is identity [0,1,2,...], left comes from forwardMapping
+        this.wires = new LinkedList<>();
 
         for (int i = 0; i < alphabetSize; i++) {
-            rightColumn.add(i);          // fixed identity column (A,B,C,...)
-        }
-        for (int i = 0; i < alphabetSize; i++) {
-            leftColumn.add(forwardMapping[i]);
+            wires.add(new Wire(i, forwardMapping[i]));
         }
 
         // Store notch (bounded)
@@ -90,11 +93,11 @@ public class RotorImpl implements Rotor {
     // ---------------------------------------------------------
 
     /**
-     * Advance the rotor by one step (rotate both columns).
+     * Advance the rotor by one step (rotate wires list).
      *
      * <p>This method simulates the physical rotation of the rotor wheel by
-     * shifting the first row of both columns to the bottom. After rotation,
-     * the method checks whether the new top position equals the notch index.</p>
+     * moving the first row to the bottom. After rotation, the method checks
+     * whether the new top position equals the notch index.</p>
      *
      * @return {@code true} if the notch is engaged after stepping (i.e., the
      *         next rotor to the left should also advance); {@code false} otherwise
@@ -102,21 +105,12 @@ public class RotorImpl implements Rotor {
     @Override
     public boolean advance() {
         rotate();
-
-        // Return true if the NEW top letter equals notch position
         int pos = getPosition();
         return pos == notchIndex;
     }
 
     /**
      * Process a signal through the rotor in the given direction.
-     *
-     * <p>All indices are global alphabet indices (0..alphabetSize-1).</p>
-     *
-     * @param index input index representing the signal entry point
-     * @param direction {@link Direction#FORWARD} for right→left (toward reflector),
-     *                  {@link Direction#BACKWARD} for left→right (from reflector)
-     * @return output index after passing through the rotor wiring
      */
     @Override
     public int process(int index, Direction direction) {
@@ -128,22 +122,15 @@ public class RotorImpl implements Rotor {
     /**
      * Get the current rotor position (the letter visible in the window).
      *
-     * <p>The position is defined as the symbol at the top of {@code rightColumn},
-     * which represents the rotor's rotational offset from its base configuration.</p>
-     *
-     * @return current position as an alphabet index (0..alphabetSize-1)
+     * <p>The position is defined as the right value of the top wire.</p>
      */
     @Override
     public int getPosition() {
-        // The top of rightColumn represents the current rotor window letter index
-        return rightColumn.get(0);
+        return wires.getFirst().right();
     }
 
     /**
-     * {@inheritDoc}
-     *
-     * <p>This implementation rotates the rotor columns until the top of
-     * {@code rightColumn} equals the target position.</p>
+     * Set the rotor to a specific position by rotating until the top right matches.
      */
     @Override
     public void setPosition(int pos) {
@@ -159,62 +146,46 @@ public class RotorImpl implements Rotor {
 
     /**
      * Get the notch index that triggers stepping of the next rotor.
-     *
-     * <p>When {@link #advance()} causes the rotor to reach this position,
-     * it returns {@code true} to signal that the next rotor should step.</p>
-     *
-     * @return notch position (0..alphabetSize-1)
      */
     @Override
     public int getNotchInd() {
         return notchIndex;
     }
 
+    /**
+     * Get the rotor's identifier.
+     */
+    @Override
+    public int getId() {
+        return id;
+    }
+
     // ---------------------------------------------------------
-    // Core encoding logic
+    // Core encoding logic using wires list
     // ---------------------------------------------------------
 
-    /**
-     * Forward encoding: signal enters from the right (keyboard side).
-     *
-     * <p>The entry index selects a symbol from {@code rightColumn}. We find
-     * where that symbol appears in {@code leftColumn} and return that index.</p>
-     */
     private int encodeForward(int entryIndex) {
-        // right entry gives the "symbol"
-        int sym = rightColumn.get(entryIndex);
-        // find where this symbol appears in left column
-        int index = leftColumn.indexOf(sym);
-        return index;
+        int sym = wires.get(entryIndex).right();
+        // find where this symbol appears as left in wires
+        for (int i = 0; i < wires.size(); i++) {
+            if (wires.get(i).left() == sym) return i;
+        }
+        throw new IllegalStateException("Forward encoding: symbol not found in left column: " + sym);
     }
 
-    /**
-     * Backward encoding: signal enters from the left (reflector side).
-     *
-     * <p>The entry index selects a symbol from {@code leftColumn}. We find
-     * where that symbol appears in {@code rightColumn} and return that index.</p>
-     */
     private int encodeBackward(int entryIndex) {
-        int sym = leftColumn.get(entryIndex);
-        int index = rightColumn.indexOf(sym);
-        return index;
+        int sym = wires.get(entryIndex).left();
+        for (int i = 0; i < wires.size(); i++) {
+            if (wires.get(i).right() == sym) return i;
+        }
+        throw new IllegalStateException("Backward encoding: symbol not found in right column: " + sym);
     }
 
-    /**
-     * Rotate both columns by shifting the first row to the bottom.
-     * This simulates the physical rotation of a real Enigma rotor.
-     */
     private void rotate() {
-        int r0 = rightColumn.remove(0);
-        int l0 = leftColumn.remove(0);
-
-        rightColumn.add(r0);
-        leftColumn.add(l0);
+        Wire top = wires.removeFirst();
+        wires.addLast(top);
     }
 
-    /**
-     * Ensure the given value is within alphabet bounds [0, alphabetSize).
-     */
     private int makeInBounds(int x) {
         x %= alphabetSize;
         return x < 0 ? x + alphabetSize : x;
